yamls/deploy-nginx-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx-update
  annotations:
    kubernetes.io/change-cause: version 1.15
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: nginx-pod
      labels:
        app: web
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.15
