yamls/deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
    matchExpressions:
    - {key: version, operator: In, values: ["1.14", "1.15"]}
  template:
    metadata:
      name: nginx-pod
      labels:
        app: web
        version: "1.14"
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.14
