yamls/genid-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: genid-args
spec:
  containers:
  - image: smlinux/genid:args
    args: ["2"]
    name: faceid-generator
    volumeMounts:
    - name: html
      mountPath: /webdata
  - image: nginx:1.14
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
  volumes:
  - name: html
    emptyDir: {}
