yamls/genid-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: genid-env
spec:
  containers:
  - image: smlinux/genid:env
    name: fakeid-generator
    volumeMounts:
    - name: html
      mountPath: /webdata
  - image: nginx:1.14
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
  volumes:
  - name: html
    emptyDir: {}
