yamls/pod-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appjs-pod-an
  annotations:
    imageregistry: "https://hub.docker.com/"
spec:
  containers:
  - name: appjs-container
    image: smlinux/appjs
    ports:
    - containerPort: 8080
