yamls/pod-appjs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appjs-pod
spec:
  containers:
  - name: appjs-container
    image: smlinux/appjs
    ports:
    - containerPort: 8080
