yamls/pod-httpd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver-1
spec:
  containers:
  - image: httpd
    name: webserver
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: 500Mi
        cpu: 1
