yamls/pod-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appjs-pod-1
  labels:
    app: web
    release: stable
spec:
  containers:
  - name: appjs-container
    image: smlinux/appjs
    ports:
    - containerPort: 8080
