yamls/pod-other.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-other
  labels:
     app: web
spec:
  containers:
  - name: appjs-container
    image: smlinux/appjs
    ports:
    - containerPort: 8080
