yamls/ingress-backend-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: ingress-nginx
  labels:
    app: nginx
  name: nginx
spec:
  containers:
  - image: nginx:1.14
    name: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
