yamls/svc-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-service-affinity
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appjs
