yamls/svc-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-external
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appjs
  externalIPs:
  - 10.0.0.11
