yamls/svc-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-service-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: appjs
