yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-service
spec:
  clusterIP: 10.100.100.100
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appjs
